[package]
name = "rstree"
version = "0.1.0"
edition = "2021"
description = "A lightweight, dependency-free clone of the Unix `tree` command, written in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/NefaroXX/rstree"
homepage = "https://github.com/NefaroXX/rstree"
documentation = "https://docs.rs/rstree"
keywords = ["tree", "cli", "filesystem", "directory", "terminal"]
categories = ["command-line-utilities", "filesystem"]
authors = ["NefaroXX"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
