[package]
name = "ls-tree"
version = "0.2.0"
edition = "2021"
description = "A lightweight, dependency-free clone of the Unix `tree` command, written in Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/NefaroXX/ls-tree"
homepage = "https://github.com/NefaroXX/ls-tree"
documentation = "https://docs.rs/ls-tree"
keywords = ["tree", "cli", "filesystem", "directory", "terminal"]
categories = ["command-line-utilities", "filesystem"]
authors = ["NefaroXX"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
